test/expected/explain_cast_a3i.out
explain (int[3])x
        ^
9: error: arithmetic or pointer type expected
